test/inference/bad/typeclass_overlapping.mlt
class H 'a { h : 'a -> int }
instance H int { h = fun x -> x }
instance H int { h = fun x -> 0 }
let main = 0
